--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <img src="pfp.gif" alt="Profile Picture" id="profile-pic">
                 <h1 id="username">Mdotty</h1>
             </div>
-            <p id="p1">14 Year Old GFX Designer, Web Developer, VFX Editor</p>
+            <p id="p1">GFX Designer, Web Developer, VFX Editor</p>
             <div class="links">
                 <a href="https://instagram.com/prodbymdotty" class="link">Instagram</a>
                 <a href="https://tiktok.com/@prodbymdotty" class="link">TikTok</a>
