--- a/index.html
+++ b/index.html
@@ -149,9 +149,10 @@
                 <img src="pfp.gif" alt="Profile Picture" id="profile-pic">
                 <h1 id="username">Mdotty</h1>
             </div>
-            <p id="p1">GFX Designer, Web Developer, VFX Editor</p>
+            <p id="p1">Cover Designer, Web Developer, Beat Producer, Artist</p>
             <div class="links">
-                <a href="https://instagram.com/prodbymdotty" class="link">Instagram</a>
+                <a href="https://instagram.com/prodbymdotty" class="link">Producer Instagram</a>
+                <a href="https://instagram.com/luhj2fr2" class="link">2nd Instagram</a>
                 <a href="https://tiktok.com/@prodbymdotty" class="link">TikTok</a>
                 <a href="discord.gg/zwTstxTQBr" class="link">Discord</a>
             </div>
